--- a/jedi-academy/package.json
+++ b/jedi-academy/package.json
@@ -24,9 +24,11 @@
     "core-js": "^2.4.1",
     "cryptiles": "^4.1.2",
     "rxjs": "^6.3.3",
+    "tslib": "^1.9.0",
     "zone.js": "^0.8.19"
   },
   "devDependencies": {
+    "@angular-devkit/build-angular": "~0.11.0",
     "@angular/cli": "~7.1.4",
     "@angular/compiler-cli": "^7.1.4",
     "@angular/language-service": "^7.1.4",
@@ -44,6 +46,6 @@
     "protractor": "~5.4.2",
     "ts-node": "~7.0.1",
     "tslint": "~5.12.0",
-    "typescript": "~3.2.2"
+    "typescript": "^3.1.6"
   }
 }
